2010-11-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writet1.c (t1_check_unusual_charstring): Drop unused variable.

2010-11-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writet1.c: Still more minor tweaks.

2010-11-26  Thanh Han The  <thanh@river-valley.org>

	* writet1.c (t1_check_unusual_charstring): switch EOL to space
	before appending.

2010-11-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writet1.c: Still more formatting tweaks.

2010-11-14  Karl Berry  <karl@tug.org>

	* writet1.c: endless formatting tweaks.

2010-11-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* download.c: Change i<MAX_CHAR_CODE into i<=MAX_CHAR_CODE, because
	MAX_CHAR_CODE is 255 now.

2010-11-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* download.c [MAX_CHAR_CODE]: Define as 255 (not 256).

	* writet1.c: More formatting and other trivial changes, to
	further reduce diffs against pdftex's writet1.c.

2010-11-12  Karl Berry  <karl@tug.org>

	* writet1.c: formatting changes only, to reduce diffs against
	pdftex's writet1.c.

2010-11-11  Thanh Han The  <thanh@river-valley.org>

	* writet1.c (t1_check_unusual_charstring): new fn.
	(t1_subset_charstrings): call it.  This resolves a bug reported by
	Knuth when there is a newline between the /CharStrings and the
	following number (dict size).

2010-10-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* output.c (hvpos): simplify the change 2010-10-22.
	Many thanks Peter.

2010-10-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* output.c (hvpos): recover the old code in hvpos() for japanese
	because the changed code leads to incorrect result in some cases.
	other cases than japanese are not affected.

2010-10-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* search.c (selfautoloc_prog): #include <kpathsea/concatn.h>
	for WIN32 and drop cast of concatn() results.

2010-06-19  Yan Li  <yan.i.li@intel.com>

	* tfmload.c (name): increase size to 500.
	(tfmopen): check for name length overflow.

2010-06-13  Karl Berry  <karl@tug.org>
